# Flux2_KV_26_04

./: .gitignore  INSTALLATION.md  README.md  agents.md  architecture.md  changelog.md  plan.md  pyproject.toml  rules.md  run.md  workflow.md
.github/: pull_request_template.md
configs/: project.yaml
scripts/: 00_ubuntu_check.py  01_runtime_smoke.py  01_vllm_smoke.py  02_modelopt_smoke.py  03_model_readiness.py  04_download_models.py  05_bf16_baseline.py  05_prepare_runtime_layout.py  06_check_visualgen_layout.py  06_quantize_nvfp4.py  07_quantized_run.py  08_compare_results.py  activate_modelopt_remote.sh  activate_remote.sh
src/flux2_kv/: __init__.py
tests/: test_runtime_smoke.py
