[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "flux2-kv"
version = "0.1.0"
description = "Native Ubuntu diagnostics and inference path for FLUX.2 Klein-KV NVFP4"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "Pillow>=11.0",
  "PyYAML>=6.0",
  "safetensors>=0.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100
